--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,7 +23,7 @@
       />
     </div>
     <div class="login__submit-btn-wrapper">
-      <button class="login__submit-btn" type="submit">Login</button>
+      <button class="login__submit-btn btn-filled" type="submit">Login</button>
       <% if (locals.errors) { %>
       <div class="login__error-message">
         <% if (locals.errors.length > 0) { %>
