--- a/views/register.ejs
+++ b/views/register.ejs
@@ -55,7 +55,7 @@
       />
     </div>
     <div class="register__submit-btn-wrapper">
-      <button class="register__submit-btn" type="submit">Register</button>
+      <button class="register__submit-btn btn-filled" type="submit">Register</button>
       <% if (locals.errors) { %>
       <div class="register__error-message">
         <% if (locals.errors.length > 0) { %>
