--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,6 +1,7 @@
 @import url("./reset.css");
 @import url("./utils.css");
 
+/** GENERAL */
 body {
   display: flex;
   flex-direction: column;
@@ -20,7 +21,17 @@ button {
   font-weight: var(--font-weight-semi);
   font-family: var(--font-family-secondary);
 }
+.btn-filled {
+  background-color: var(--clr-tertiary);
+  color: var(--clr-bg-1);
+}
+.btn-outlined {
+  background-color: transparent;
+  border: 1px solid var(--clr-tertiary);
+  color: var(--clr-tertiary);
+}
 
+/** HEADER */
 header {
   width: 100%;
   padding: var(--space-2xl) 0;
@@ -37,6 +48,8 @@ header {
 .header__list-item {
   list-style: none;
 }
+
+/** REGISTER */
 .register__heading {
   padding-top: var(--space-s);
   font-family: var(--font-family-secondary);
@@ -78,8 +91,6 @@ header {
   flex-direction: column;
 }
 .register__submit-btn {
-  background-color: var(--clr-tertiary);
-  color: var(--clr-bg-1);
 }
 .register__error-message {
   border-radius: var(--space-m);
@@ -116,7 +127,6 @@ header {
 .register__requirements-info {
   font-size: var(--font-size-xs);
 }
-
 .register__info-card {
   margin: var(--space-2xl) 0;
   padding: var(--space-xl);
@@ -138,8 +148,10 @@ header {
 .register__info-text {
   font-size: var(--font-size-s);
   padding-bottom: var(--space-m);
+  line-height: var(--line-height-s);
 }
 
+/** LOGIN */
 .login__heading {
   padding-top: var(--space-s);
   font-family: var(--font-family-secondary);
@@ -181,8 +193,6 @@ header {
   flex-direction: column;
 }
 .login__submit-btn {
-  background-color: var(--clr-tertiary);
-  color: var(--clr-bg-1);
 }
 .login__error-message {
   border-radius: var(--space-m);
@@ -241,8 +251,115 @@ header {
 .login__info-text {
   font-size: var(--font-size-s);
   padding-bottom: var(--space-m);
+  line-height: var(--line-height-s);
 }
 
+/** HOME  */
+.home__heading {
+  padding-top: var(--space-s);
+  font-family: var(--font-family-secondary);
+  font-size: var(--font-size-3xl);
+  font-weight: var(--font-weight-bold);
+}
+.home__info-card {
+  padding: var(--space-xl);
+  border-radius: var(--space-m);
+
+  border: 2px solid var(--clr-secondary);
+  background-color: var(--clr-bg-2);
+}
+.home__info-main-heading {
+  padding-bottom: var(--space-s);
+  font-family: var(--font-family-secondary);
+  font-size: var(--font-size-xl);
+  font-weight: var(--font-weight-bold);
+  padding-bottom: var(--space-l);
+}
+.home__user-data-heading {
+  font-size: var(--font-size-l);
+  font-weight: var(--font-weight-bold);
+  text-decoration: underline;
+}
+.home__information-wrapper {
+  padding: var(--space-s) 0 var(--space-l) 0;
+  display: grid;
+  grid-template-columns: max-content 1fr;
+  row-gap: 0.3rem;
+  column-gap: 0.8rem;
+}
+.home__label {
+  font-weight: var(--font-weight-bold);
+  font-size: var(--font-size-s);
+}
+.home__value {
+  font-size: var(--font-size-s);
+}
+.home__buttons-wrapper {
+  display: flex;
+  flex-direction: column;
+  max-width: 350px;
+}
+.home__buttons-wrapper-child {
+  display: flex;
+  justify-content: space-between;
+}
+.home__messages-btn,
+.home__new-message-btn {
+  padding-left: var(--space-xl);
+  padding-right: var(--space-xl);
+}
+.home__join-btn {
+  margin-top: 0;
+  margin-bottom: var(--space-2xl);
+}
+.home__info-heading {
+  font-size: var(--font-size-l);
+  font-weight: var(--font-weight-bold);
+}
+.home__info-text {
+  font-size: var(--font-size-s);
+  line-height: var(--line-height-s);
+}
+.home__heading-2 {
+  padding-top: var(--space-2xl);
+  font-family: var(--font-family-secondary);
+  font-size: var(--font-size-2xl);
+  font-weight: var(--font-weight-bold);
+}
+.post-card {
+  padding: var(--space-xl);
+  border-radius: var(--space-m);
+  margin-bottom: var(--space-xl);
+
+  border: 2px solid var(--clr-secondary);
+  background-color: var(--clr-bg-2);
+}
+.post-card__title {
+  font-size: var(--font-size-2xl);
+  font-weight: var(--font-weight-semi);
+  margin-top: -12px;
+}
+.post-card__text {
+  font-size: var(--font-size-s);
+  padding-bottom: var(--space-m);
+  line-height: var(--line-height-s);
+}
+.post-card__hr {
+  border: none;
+  height: 1px;
+  width: 112%;
+  margin-left: -6%;
+  margin-right: -10%;
+  margin-top: var(--space-l);
+  margin-bottom: var(--space-s);
+
+  background-color: var(--clr-secondary);
+}
+.post-card__details-wrapper {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: -10px;
+}
 footer {
   width: 100%;
   background-color: var(--clr-bg-2);
