--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,7 +8,7 @@
         type="email"
         name="email"
         value="<%= locals.oldInput?.email || '' %>"
-        placeholder="email@placeholder.com"
+        placeholder="your email..."
         required
       />
     </div>
@@ -18,7 +18,7 @@
         class="login__input"
         type="password"
         name="password"
-        placeholder="aLongAndStrongPassword..."
+        placeholder="your password..."
         required
       />
     </div>
