--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -18,7 +18,7 @@ button {
   border: none;
   border-radius: var(--space-100);
 
-  font-weight: var(--font-weight-semi);
+  font-weight: var(--font-weight-bold);
   font-family: var(--font-family-secondary);
 }
 .btn-filled {
