--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,7 @@
 <h2 class="home__heading">Your Room</h2>
 <section class="home__info-card">
   <h2 class="home__info-main-heading">Welcome <%= locals.user.firstname%></h2>
+  <a class="logout-tag" href="/logout">Logout</a>
   <h3 class="home__user-data-heading">Your information</h3>
     <div class="home__information-wrapper">
       <p class="home__label">Username:</p>
