--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -441,6 +441,41 @@ header {
   font-size: var(--font-size-s);
 }
 
+/** MESSAGES-PAGE  */
+.messages__wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+.messages__wrapper-child {
+  display: flex;
+  flex: 1;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.messages__new-message {
+  font-size: var(--font-size-l);
+  border-radius: var(--space-100);
+  padding: var(--space-xs) var(--space-m);
+  margin: var(--space-m) 0 var(--space-s) 0;
+  height: 26px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.messages__toggle-info {
+  background-color: transparent;
+  height: 26px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.messages__heading {
+  padding-top: var(--space-s);
+  font-family: var(--font-family-secondary);
+  font-size: var(--font-size-3xl);
+  font-weight: var(--font-weight-bold);
+}
+
 footer {
   width: 100%;
   background-color: var(--clr-bg-2);
