--- a/public/styles/utils.css
+++ b/public/styles/utils.css
@@ -31,6 +31,7 @@
   --font-size-xs: 12px;
   --font-size-s: 14px;
   --font-size-m: 16px;
+  --font-size-xm: 18px;
   --font-size-l: 20px;
   --font-size-xl: 24px;
   --font-size-2xl: 32px;
